--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html {
+    height: 100%; 
+}
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; 
     padding: 0; 
@@ -51,7 +54,7 @@ a {
     text-decoration: none; 
     font-size: 13px; 
     display: flex; 
-    padding-left: 15px;
+    padding-left: 1px;
      
 
 }
