Added Google Home Image

--- a/css/main.css
+++ b/css/main.css
@@ -67,3 +67,12 @@ a {
     padding-right: 15px; 
 }
 
+#google-home {
+    width:282px; 
+    height: 115px; 
+    margin-top: 170px; 
+    position: relative; 
+    padding-bottom: 18px; 
+
+}
+
